Disconnect NetconfDeviceCapabilities and NetconfSessionPreferences
NetconfDeviceCapabilities are schema-dependent and dynamically derived
during schema match. Split these two, so that both can become
completely immutable.

This requires reworking NetconfDevice, so that it keeps the fields
needed for tracking internally.

JIRA: NETCONF-920
Change-Id: Iaed0452680a625b5bf62f5a4d617aad30d86c971
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>